Prep to update runner

--- a/analysis/test_ga.ipynb
+++ b/analysis/test_ga.ipynb
@@ -2,108 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d1471ed0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "local\n",
-      "stop final relax at some point\n",
-      "init CUDA\n",
-      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
-      "GPU max threads per block: 1024\n",
-      "=== Compiling kernel variant: crystal ===\n",
-      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_crystal.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 78 registers, 1264 bytes cumulative stack size, 420 bytes cmem[0], 24 bytes cmem[2]\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 78\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1264\n",
-      "=== Compiling kernel variant: no_sep ===\n",
-      "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_no_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 64 registers, 1232 bytes cumulative stack size, 420 bytes cmem[0], 24 bytes cmem[2]\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 64\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 1232\n",
-      "=== Compiling kernel variant: sep ===\n",
-      "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved.cu -o /mnt/d//packing/temp/pack_cuda_sep.cubin\n",
-      "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
-      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 36 registers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_boundary_list_total\n",
-      "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
-      "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 58 registers, 144 bytes cumulative stack size, 420 bytes cmem[0], 32 bytes cmem[2]\n",
-      "\n",
-      "\n",
-      "--- Kernel: multi_overlap_list_total [sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 58\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 144\n",
-      "\n",
-      "--- Kernel: multi_boundary_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 43\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 240\n",
-      "\n",
-      "--- Kernel: multi_boundary_distance_list_total ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 36\n",
-      "  Shared memory (bytes): 0\n",
-      "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
@@ -127,34 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9de2cb15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ERROR!\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 41, in run\n",
-      "    self.modifier_values[key] = value.random_function(rng)\n",
-      "                                ~~~~~~~~~~~~~~~~~~~~~^^^^^\n",
-      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 247, in <lambda>\n",
-      "    res.modifier_dict['scale_fine_iterations'] = pm(1., lambda r:np.uniform(1.,1.5), scale_fine_iterations)\n",
-      "                                                                 ^^^^^^^^^^\n",
-      "  File \"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/numpy/__init__.py\", line 414, in __getattr__\n",
-      "    raise AttributeError(\"module {!r} has no attribute \"\n",
-      "                         \"{!r}\".format(__name__, attr))\n",
-      "AttributeError: module 'numpy' has no attribute 'uniform'\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pack_runner\n",
     "fastMode = False\n",
-    "runner = pack_runner.baseline_runner(fast_mode=False)\n",
+    "runner = pack_runner.baseline_runner_fixed_h(fast_mode=False)\n",
     "\n",
     "runner.base_ga.N_trees_to_do = np.array([40])\n",
     "runner.base_ga.plot_fitness_predictors = False\n",
@@ -167,22 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "62e3de6c",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'best_cost_per_generation'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mrunner\u001b[49m\u001b[43m.\u001b[49m\u001b[43mresult_ga\u001b[49m\u001b[43m.\u001b[49m\u001b[43mbest_cost_per_generation\u001b[49m\n",
-      "\u001b[31mAttributeError\u001b[39m: 'NoneType' object has no attribute 'best_cost_per_generation'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "runner.result_ga.best_cost_per_generation"
    ]
