--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -127,64 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "9de2cb15",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation 0, Trees 40, Best cost: 0.05277536, Est: 0.13193841, h: 4.000000\n",
-      "Generation 1, Trees 40, Best cost: 0.01487751, Est: 0.03719376, h: 4.000000\n",
-      "Generation 2, Trees 40, Best cost: 0.00756818, Est: 0.01892045, h: 4.000000\n",
-      "Generation 3, Trees 40, Best cost: 0.00527892, Est: 0.01319729, h: 3.970000\n",
-      "Generation 4, Trees 40, Best cost: 0.00482708, Est: 0.01206770, h: 3.940000\n",
-      "Generation 5, Trees 40, Best cost: 0.00751986, Est: 0.01879965, h: 3.910000\n",
-      "Generation 6, Trees 40, Best cost: 0.01064351, Est: 0.02660877, h: 3.880000\n",
-      "Generation 7, Trees 40, Best cost: 0.00977092, Est: 0.02442729, h: 3.880000\n",
-      "Generation 8, Trees 40, Best cost: 0.01755431, Est: 0.04388577, h: 3.850000\n",
-      "Generation 9, Trees 40, Best cost: 0.01266806, Est: 0.03167016, h: 3.850000\n",
-      "[0.01266806 0.01613898 0.0162402  0.0170702  0.01755431 0.01830413\n",
-      " 0.02128585 0.02188972 0.02657955]\n",
-      "[[0.05277536]\n",
-      " [0.01487751]\n",
-      " [0.00756818]\n",
-      " [0.00527892]\n",
-      " [0.00482708]\n",
-      " [0.00751986]\n",
-      " [0.01064351]\n",
-      " [0.00977092]\n",
-      " [0.01755431]\n",
-      " [0.01266806]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import pack_runner\n",
-    "fastMode = False\n",
-    "ga = pack_ga.GA()\n",
-    "\n",
-    "ga.N_trees_to_do = np.array([40])\n",
-    "ga.n_generations = 10\n",
-    "ga.population_size = 100\n",
-    "ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "ga.do_legalize = False\n",
-    "ga.initializer.base_solution.use_fixed_h = True\n",
-    "ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
-    "ga.reduce_h_threshold = 0.01\n",
-    "ga.reduce_h_amount = 0.03\n",
-    "\n",
-    "kgs.profiling=False\n",
-    "ga.run()\n",
-    "print(ga.populations[-1].fitness)\n",
-    "print(ga.best_cost_per_generation)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "b9d9dcec",
    "metadata": {},
    "outputs": [
     {
@@ -201,19 +145,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0: Best costs = [0.052775364369153976]\n",
-      "Generation 1: Best costs = [0.014877505600452423]\n",
-      "Generation 2: Best costs = [0.015357094816863537]\n",
-      "Generation 3: Best costs = [0.012289338745176792]\n",
-      "Generation 4: Best costs = [0.012848918326199055]\n",
-      "Generation 5: Best costs = [0.011257318779826164]\n",
-      "Generation 6: Best costs = [0.017810005694627762]\n",
-      "Generation 7: Best costs = [0.015877146273851395]\n",
-      "Generation 8: Best costs = [0.014126379042863846]\n",
-      "Generation 9: Best costs = [0.012321148067712784]\n",
-      "[0.01232115 0.01234639 0.01244105 0.01379287 0.01412638 0.01477118\n",
-      " 0.01642179 0.0207346  0.03511301]\n",
-      "[[np.float32(0.052775364), np.float32(0.014877506), np.float32(0.015357095), np.float32(0.012289339), np.float32(0.012848918), np.float32(0.011257319), np.float32(0.017810006), np.float32(0.015877146), np.float32(0.014126379), np.float32(0.012321148)]]\n"
+      "Generation 0, Trees 40, Best cost: 0.19561130, Est: 0.48902826, h: 4.391835\n",
+      "Generation 1, Trees 40, Best cost: 0.17793527, Est: 0.44483819, h: 4.191494\n",
+      "Generation 2, Trees 40, Best cost: 0.17460646, Est: 0.43651614, h: 4.138963\n",
+      "Generation 3, Trees 40, Best cost: 0.17026095, Est: 0.42565236, h: 4.100847\n",
+      "Generation 4, Trees 40, Best cost: 0.16571155, Est: 0.41427889, h: 4.049143\n",
+      "Generation 5, Trees 40, Best cost: 0.16176589, Est: 0.40441470, h: 3.999404\n",
+      "Generation 6, Trees 40, Best cost: 0.16005662, Est: 0.40014157, h: 3.979545\n",
+      "Generation 7, Trees 40, Best cost: 0.15642674, Est: 0.39106686, h: 3.926157\n",
+      "Generation 8, Trees 40, Best cost: 0.15642674, Est: 0.39106686, h: 3.926157\n",
+      "Generation 9, Trees 40, Best cost: 0.15587270, Est: 0.38968177, h: 3.922494\n",
+      "[0.1558727  0.15625444 0.15628953 0.15642674 0.15658386 0.15675451\n",
+      " 0.15754843 0.15945667 0.16465542]\n",
+      "[[0.1956113 ]\n",
+      " [0.17793527]\n",
+      " [0.17460646]\n",
+      " [0.17026095]\n",
+      " [0.16571155]\n",
+      " [0.16176589]\n",
+      " [0.16005662]\n",
+      " [0.15642674]\n",
+      " [0.15642674]\n",
+      " [0.1558727 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pack_runner\n",
+    "fastMode = False\n",
+    "ga = pack_ga.GA()\n",
+    "\n",
+    "ga.N_trees_to_do = np.array([40])\n",
+    "ga.n_generations = 10\n",
+    "ga.population_size = 100\n",
+    "ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
+    "ga.do_legalize = False\n",
+    "#ga.initializer.base_solution.use_fixed_h = True\n",
+    "#ga.initializer.fixed_h = cp.array([4.,0.,0.], dtype=kgs.dtype_cp)\n",
+    "#ga.reduce_h_threshold = 0.01\n",
+    "#ga.reduce_h_amount = 0.03\n",
+    "\n",
+    "kgs.profiling=False\n",
+    "ga.run()\n",
+    "print(ga.populations[-1].fitness)\n",
+    "print(ga.best_cost_per_generation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b9d9dcec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 0: Best costs = [[0.195611]]\n",
+      "Generation 1: Best costs = [[0.177935]]\n",
+      "Generation 2: Best costs = [[0.174606]]\n",
+      "Generation 3: Best costs = [[0.170261]]\n",
+      "Generation 4: Best costs = [[0.165712]]\n",
+      "Generation 5: Best costs = [[0.161766]]\n",
+      "Generation 6: Best costs = [[0.160057]]\n",
+      "Generation 7: Best costs = [[0.156427]]\n",
+      "Generation 8: Best costs = [[0.156427]]\n",
+      "Generation 9: Best costs = [[0.155873]]\n",
+      "[[0.1558727 ]\n",
+      " [0.15625444]\n",
+      " [0.15628953]\n",
+      " [0.15642674]\n",
+      " [0.15658386]\n",
+      " [0.15675451]\n",
+      " [0.15754843]\n",
+      " [0.15945667]\n",
+      " [0.16465542]]\n",
+      "[[array([0.1956113], dtype=float32), array([0.17793527], dtype=float32), array([0.17460646], dtype=float32), array([0.17026095], dtype=float32), array([0.16571155], dtype=float32), array([0.16176589], dtype=float32), array([0.16005662], dtype=float32), array([0.15642674], dtype=float32), array([0.15642674], dtype=float32), array([0.1558727], dtype=float32)]]\n"
      ]
     }
    ],
@@ -228,9 +235,9 @@
     "\n",
     "runner.ga.population_size = 100\n",
     "runner.ga.selection_size = [1,2,3,4,5,10,20,30,50]\n",
-    "runner.ga.fixed_h = 4.\n",
-    "runner.ga.reduce_h_threshold = 0.01\n",
-    "runner.ga.reduce_h_amount = 0.03\n",
+    "#runner.ga.fixed_h = 4.\n",
+    "#runner.ga.reduce_h_threshold = 0.01\n",
+    "#runner.ga.reduce_h_amount = 0.03\n",
     "\n",
     "runner.run()\n",
     "print(runner.ga.population.fitness)\n",
