--- a/analysis/test_new_ga.ipynb
+++ b/analysis/test_new_ga.ipynb
@@ -193,34 +193,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b9d9dcec",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation 0: Best costs = [[0.195611]]\n",
-      "Generation 1: Best costs = [[0.177935]]\n",
-      "Generation 2: Best costs = [[0.174606]]\n",
-      "Generation 3: Best costs = [[0.170261]]\n",
-      "Generation 4: Best costs = [[0.165712]]\n",
-      "Generation 5: Best costs = [[0.161766]]\n",
-      "Generation 6: Best costs = [[0.160057]]\n",
-      "Generation 7: Best costs = [[0.156427]]\n",
-      "Generation 8: Best costs = [[0.156427]]\n",
-      "Generation 9: Best costs = [[0.155873]]\n",
-      "[[0.1558727 ]\n",
-      " [0.15625444]\n",
-      " [0.15628953]\n",
-      " [0.15642674]\n",
-      " [0.15658386]\n",
-      " [0.15675451]\n",
-      " [0.15754843]\n",
-      " [0.15945667]\n",
-      " [0.16465542]]\n",
-      "[[array([0.1956113], dtype=float32), array([0.17793527], dtype=float32), array([0.17460646], dtype=float32), array([0.17026095], dtype=float32), array([0.16571155], dtype=float32), array([0.16176589], dtype=float32), array([0.16005662], dtype=float32), array([0.15642674], dtype=float32), array([0.15642674], dtype=float32), array([0.1558727], dtype=float32)]]\n"
+     "ename": "TypeError",
+     "evalue": "'module' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     10\u001b[39m runner.ga.selection_size = [\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m4\u001b[39m,\u001b[32m5\u001b[39m,\u001b[32m10\u001b[39m,\u001b[32m20\u001b[39m,\u001b[32m30\u001b[39m,\u001b[32m50\u001b[39m]\n\u001b[32m     11\u001b[39m \u001b[38;5;66;03m#runner.ga.fixed_h = 4.\u001b[39;00m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m#runner.ga.reduce_h_threshold = 0.01\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#runner.ga.reduce_h_amount = 0.03\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m \u001b[43mrunner\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrun\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     16\u001b[39m \u001b[38;5;28mprint\u001b[39m(runner.ga.population.fitness)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mprint\u001b[39m(runner.ga.best_costs_per_generation)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:1146\u001b[39m, in \u001b[36mOrchestrator.run\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m   1143\u001b[39m \u001b[38;5;28mself\u001b[39m.ga.seed = \u001b[38;5;28mself\u001b[39m.seed\n\u001b[32m   1145\u001b[39m \u001b[38;5;66;03m# Initialize\u001b[39;00m\n\u001b[32m-> \u001b[39m\u001b[32m1146\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mga\u001b[49m\u001b[43m.\u001b[49m\u001b[43minitialize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   1147\u001b[39m \u001b[38;5;28mself\u001b[39m._relax(\u001b[38;5;28mself\u001b[39m.ga.get_list_for_relaxation())        \n\u001b[32m   1149\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m i_gen \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m.n_generations):\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:886\u001b[39m, in \u001b[36mGA.initialize\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    884\u001b[39m \u001b[38;5;28mself\u001b[39m.check_constraints(debugging_mode_offset=\u001b[32m2\u001b[39m)        \n\u001b[32m    885\u001b[39m \u001b[38;5;28mself\u001b[39m.fitness_cost.check_constraints()\n\u001b[32m--> \u001b[39m\u001b[32m886\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_initialize\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m/mnt/d/packing/code/analysis/../core/pack_ga2.py:957\u001b[39m, in \u001b[36mGASinglePopulation._initialize\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    955\u001b[39m \u001b[38;5;28mself\u001b[39m.initializer.seed = \u001b[32m200\u001b[39m*\u001b[38;5;28mself\u001b[39m.seed + \u001b[38;5;28mself\u001b[39m.N_trees_to_do \u001b[38;5;66;03m# backwards compatibility        \u001b[39;00m\n\u001b[32m    956\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fixed_h \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m957\u001b[39m     \u001b[38;5;28mself\u001b[39m.initializer.fixed_h = cp.array([\u001b[38;5;28mself\u001b[39m.fixed_h*\u001b[43mnp\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mN_trees_to_do\u001b[49m\u001b[43m)\u001b[49m,\u001b[32m0\u001b[39m,\u001b[32m0\u001b[39m],dtype=kgs.dtype_cp)\n\u001b[32m    958\u001b[39m     \u001b[38;5;28mself\u001b[39m.initializer.base_solution.use_fixed_h = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m    959\u001b[39m \u001b[38;5;28mself\u001b[39m.population = \u001b[38;5;28mself\u001b[39m.initializer.initialize_population(\u001b[38;5;28mself\u001b[39m.population_size, \u001b[38;5;28mself\u001b[39m.N_trees_to_do)\n",
+      "\u001b[31mTypeError\u001b[39m: 'module' object is not callable"
      ]
     }
    ],
