--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -12,7 +12,6 @@
      "text": [
       "local\n",
       "False\n",
-      "stop final relax at some point\n",
       "init CUDA\n",
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
       "GPU max threads per block: 1024\n",
@@ -119,8 +118,7 @@
       "  Num registers: 38\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 2324\n",
-      "  Local memory (bytes): 96\n",
-      "{'seed': 0, 'scale_fine_iterations': 1.0, 'fine_steps': 4, 'set_used_fixed_h': False, 'set_cost0_scaling': 0.01, 'n_generations': 3, 'scale_population_size': 0.25}\n"
+      "  Local memory (bytes): 96\n"
      ]
     },
     {
@@ -137,10 +135,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generation 0, Trees 10, Best cost: 0.04396895, Est: 0.43968945, h: 2.069241\n",
-      "Generation 1, Trees 10, Best cost: 0.04138902, Est: 0.41389018, h: 2.021389\n",
-      "Generation 2, Trees 10, Best cost: 0.04117063, Est: 0.41170630, h: 2.018072\n",
-      "Runtime: 7.4s\n",
+      "Generation 0: Best costs = [[1.914999, 0.028289]]\n",
+      "Generation 1: Best costs = [[1.914999, 0.020694]]\n",
+      "Generation 2: Best costs = [[1.914999, 0.015665]]\n",
+      "Generation 3: Best costs = [[1.914999, 0.015665]]\n",
+      "Generation 4: Best costs = [[1.914999, 0.015665]]\n",
       "Testing cost computation and gradients\n"
      ]
     },
@@ -372,7 +371,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x780b17afe240>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x73fa45902f40>\n",
       "All tests passed.\n"
      ]
     }
