--- a/analysis/analyze_ga_results.ipynb
+++ b/analysis/analyze_ga_results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "config",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
     "runner_name = 'Baseline'  # e.g., 'Baseline', 'PopSize+Generations', 'CostWeights', etc.\n",
     "\n",
     "# Was fast_mode used?\n",
-    "fast_mode = True  # Set to True if analyzing fast_mode results\n",
+    "fast_mode = False  # Set to True if analyzing fast_mode results\n",
     "\n",
     "# Results directory\n",
     "results_dir = '../../results/many_ga/abbr/'\n",
