restore_individual_h to True, tweak runner

--- a/analysis/test_many_ga.ipynb
+++ b/analysis/test_many_ga.ipynb
@@ -11,7 +11,7 @@
      "output_type": "stream",
      "text": [
       "local\n",
-      "Will use 2 parallel processes\n"
+      "Will use 4 parallel processes\n"
      ]
     }
    ],
@@ -42,7 +42,7 @@
     "\n",
     "fast_mode = False  # Set to True for quick testing\n",
     "which_runner = pack_runner.baseline_runner  # Which example runner to use\n",
-    "n_parallel_processes = 2 if kgs.env=='local' else 4\n",
+    "n_parallel_processes = 4 if kgs.env=='local' else 4\n",
     "print(f\"Will use {n_parallel_processes} parallel processes\")"
    ]
   },
@@ -56,7 +56,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Git commit: 7ec52b24\n"
+      "Git commit: 558b61e2\n"
      ]
     }
    ],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f309d92c",
    "metadata": {},
    "outputs": [
@@ -93,10 +93,209 @@
      "output_type": "stream",
      "text": [
       "Detected 1 GPU(s)\n",
-      "Starting parallel execution of 4 seeds using 2 processes\n",
+      "Starting parallel execution of 1000 seeds using 4 processes\n",
       "Staggering process startup by 2 seconds each...\n",
       "\n",
-      "Starting process for seed 0...\n"
+      "Starting process for seed 0...\n",
+      "local\n",
+      "Seed 0 using GPU 0\n",
+      "\n",
+      "=== Starting seed 0 (Process 7442) ===\n",
+      "[1, 3, 6, 9, 11, 14, 17, 20, 22, 25, 31, 36, 41, 47, 52, 66, 80, 93, 107, 121, 134, 162, 189, 216, 243, 271, 325, 380, 434, 489, 544, 680, 817, 953, 1090, 1226, 1362]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 0: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 1...\n",
+      "local\n",
+      "Seed 1 using GPU 0\n",
+      "\n",
+      "=== Starting seed 1 (Process 7534) ===\n",
+      "[1, 3, 5, 7, 10, 12, 14, 17, 19, 21, 26, 30, 35, 39, 44, 55, 67, 78, 90, 101, 113, 136, 159, 182, 204, 227, 273, 319, 365, 411, 456, 571, 686, 800, 915, 1029, 1144]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 1: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 2...\n",
+      "local\n",
+      "Seed 2 using GPU 0\n",
+      "\n",
+      "=== Starting seed 2 (Process 7592) ===\n",
+      "[1, 2, 3, 5, 6, 8, 9, 10, 12, 13, 16, 19, 22, 25, 27, 34, 42, 49, 56, 63, 70, 84, 98, 112, 126, 141, 169, 197, 226, 254, 282, 353, 424, 495, 565, 636, 707]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 2: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 3...\n",
+      "\n",
+      "All initial processes started. Monitoring for completion...\n",
+      "\n",
+      "\n",
+      "*** Seed 0 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "\n",
+      "*** Seed 1 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "\n",
+      "*** Seed 2 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "Waiting 5.0s before starting seed 4...\n",
+      "local\n",
+      "Seed 3 using GPU 0\n",
+      "\n",
+      "=== Starting seed 3 (Process 7636) ===\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 16, 20, 24, 28, 32, 36, 40, 48, 56, 64, 72, 80, 96, 112, 128, 144, 160, 200, 240, 280, 320, 360, 400]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 3: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 4...\n",
+      "Waiting 5.0s before starting seed 5...\n",
+      "local\n",
+      "Seed 4 using GPU 0\n",
+      "\n",
+      "=== Starting seed 4 (Process 7674) ===\n",
+      "[1, 4, 8, 12, 16, 20, 23, 27, 31, 35, 42, 50, 58, 65, 73, 92, 111, 130, 149, 168, 187, 225, 263, 301, 339, 377, 453, 529, 605, 681, 757, 947, 1137, 1327, 1517, 1707, 1897]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 4: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 5...\n",
+      "Waiting 5.0s before starting seed 6...\n",
+      "local\n",
+      "Seed 5 using GPU 0\n",
+      "\n",
+      "=== Starting seed 5 (Process 7712) ===\n",
+      "[1, 4, 7, 10, 14, 17, 20, 24, 27, 30, 37, 44, 50, 57, 64, 80, 97, 113, 130, 146, 163, 196, 229, 263, 296, 329, 395, 462, 528, 594, 661, 827, 992, 1158, 1324, 1490, 1656]\n",
+      "ERROR!\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 120, in scale_population_size\n",
+      "    raise 'stop'\n",
+      "TypeError: exceptions must derive from BaseException\n",
+      "\n",
+      "ERROR occurred in seed 5: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~\n",
+      "Starting process for seed 6...\n",
+      "\n",
+      "*** Seed 3 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "\n",
+      "*** Seed 4 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "\n",
+      "*** Seed 5 failed: Traceback (most recent call last):\n",
+      "  File \"/mnt/d/packing/code/analysis/../core/pack_runner.py\", line 44, in run\n",
+      "    value.modifier_function(ga, key, self.modifier_values[key])\n",
+      "    ~~~~~~~~~~~~~~~~~~~ ***\n",
+      "\n",
+      "Waiting 4.9s before starting seed 7...\n",
+      "local\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \u001b[35m\"<string>\"\u001b[0m, line \u001b[35m1\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    from multiprocess.spawn import spawn_main; \u001b[31mspawn_main\u001b[0m\u001b[1;31m(tracker_fd=98, pipe_handle=105)\u001b[0m\n",
+      "                                               \u001b[31m~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/multiprocess/spawn.py\"\u001b[0m, line \u001b[35m122\u001b[0m, in \u001b[35mspawn_main\u001b[0m\n",
+      "    exitcode = _main(fd, parent_sentinel)\n",
+      "  File \u001b[35m\"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/multiprocess/spawn.py\"\u001b[0m, line \u001b[35m132\u001b[0m, in \u001b[35m_main\u001b[0m\n",
+      "    self = reduction.pickle.load(from_parent)\n",
+      "  File \u001b[35m\"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/dill/_dill.py\"\u001b[0m, line \u001b[35m297\u001b[0m, in \u001b[35mload\u001b[0m\n",
+      "    return \u001b[31mUnpickler(file, ignore=ignore, **kwds).load\u001b[0m\u001b[1;31m()\u001b[0m\n",
+      "           \u001b[31m~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^\u001b[0m\n",
+      "  File \u001b[35m\"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/dill/_dill.py\"\u001b[0m, line \u001b[35m452\u001b[0m, in \u001b[35mload\u001b[0m\n",
+      "    obj = StockUnpickler.load(self)\n",
+      "  File \u001b[35m\"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/dill/_dill.py\"\u001b[0m, line \u001b[35m442\u001b[0m, in \u001b[35mfind_class\u001b[0m\n",
+      "    return \u001b[31mStockUnpickler.find_class\u001b[0m\u001b[1;31m(self, module, name)\u001b[0m\n",
+      "           \u001b[31m~~~~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\u001b[1;31m^^^^^^^^^^^^^^^^^^^^\u001b[0m\n",
+      "  File \u001b[35m\"/mnt/d/packing/code/analysis/../core/pack_runner.py\"\u001b[0m, line \u001b[35m5\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    import pack_ga2\n",
+      "  File \u001b[35m\"/mnt/d/packing/code/analysis/../core/pack_ga2.py\"\u001b[0m, line \u001b[35m13\u001b[0m, in \u001b[35m<module>\u001b[0m\n",
+      "    import pack_dynamics\n",
+      "  File \u001b[35m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[35m1360\u001b[0m, in \u001b[35m_find_and_load\u001b[0m\n",
+      "  File \u001b[35m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[35m1331\u001b[0m, in \u001b[35m_find_and_load_unlocked\u001b[0m\n",
+      "  File \u001b[35m\"<frozen importlib._bootstrap>\"\u001b[0m, line \u001b[35m911\u001b[0m, in \u001b[35m_load_unlocked\u001b[0m\n",
+      "\u001b[1;35mKeyboardInterrupt\u001b[0m\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 180\u001b[39m\n\u001b[32m    178\u001b[39m     sleep_time = stagger_delay - time_since_last_start\n\u001b[32m    179\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mWaiting \u001b[39m\u001b[38;5;132;01m{\u001b[39;00msleep_time\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.1f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33ms before starting seed \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_seed\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m--> \u001b[39m\u001b[32m180\u001b[39m     \u001b[43mtime\u001b[49m\u001b[43m.\u001b[49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[43msleep_time\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    182\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mStarting process for seed \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnew_seed\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m...\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m    183\u001b[39m new_p = Process(target=run_single_seed, args=(new_seed, which_runner, fast_mode, git_commit_id, output_dir, result_queue))\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
